--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ repositories {
 
 dependencies {
     compile("org.springframework.cloud:spring-cloud-starter-eureka")
+    compile('org.springframework.cloud:spring-cloud-starter-config')
     compile("org.springframework.cloud:spring-cloud-starter-zuul")
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
