--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,10 @@
 spring:
   application:
     name: sample-api-gateway
+
+zuul:
+  ignoredServices: '*'
+  routes:
+    bff:
+      path: /bff/**
+      serviceId: sample-bff
